[gd_scene load_steps=6 format=3 uid="uid://dii7k66583hg4"]

[ext_resource type="Script" uid="uid://d3s33plnspxys" path="res://Scripts/player.gd" id="1_8giqj"]
[ext_resource type="Texture2D" uid="uid://bjw8fn1bcqucb" path="res://Textures/debug_character.png" id="2_8giqj"]
[ext_resource type="Script" uid="uid://d058rgxy13qn1" path="res://Scripts/health_changed.gd" id="3_xshqr"]
[ext_resource type="Script" uid="uid://bg0i0kfe5ha7j" path="res://Scripts/health_bar.gd" id="4_dy2fl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_242vi"]
size = Vector2(82, 67)

[node name="DebugCharacter" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_8giqj")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.151562, 0.170833)
texture = ExtResource("2_8giqj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_242vi")

[node name="HealthComponent" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("3_xshqr")

[node name="ProgressBar" type="ProgressBar" parent="CharacterBody2D/HealthComponent"]
modulate = Color(0.358103, 0, 0.0449308, 1)
self_modulate = Color(0.356863, 0, 0.0431373, 1)
offset_right = 4.0
offset_bottom = 27.0
script = ExtResource("4_dy2fl")

[connection signal="health_changed" from="CharacterBody2D/HealthComponent" to="CharacterBody2D/HealthComponent/ProgressBar" method="_on_health_changed"]
